[metadata]
name = syntribos
summary = API Security Scanner
description-file =
    README.rst
author = OpenStack Security Group
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/syntribos/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: security

[entry_points]
console_scripts =
    syntribos = syntribos.runner:entry_point

oslo.config.opts =
    syntribos.config = syntribos.config:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
