[metadata]
name = syntribos
summary = API Security Scanner
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack Security Group
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/syntribos/latest/
version = 0.3.1
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Security
    Topic :: Software Development :: Testing
    Topic :: Utilities

[entry_points]
console_scripts =
    syntribos = syntribos.runner:entry_point

oslo.config.opts =
    syntribos.config = syntribos.config:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages = syntribos

[compile_catalog]
directory = syntribos/locale
domain = syntribos

[update_catalog]
domain = syntribos
output_dir = syntribos/locale
input_file = syntribos/locale/syntribos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = syntribos/locale/syntribos.pot
